syntax = "proto3";
package wiradata.users;

option go_package = "pb/users;users";
option java_package = "com.wiradata.erpapplication.users";
option java_multiple_files = true;

message Branch {
  string id = 1;
  string company_id = 2;
  string region_id = 3;
  string region_name = 4;
  string name = 5;
  string code = 6;
  string address = 7;
  string city = 8;
  string province = 9;
  string npwp = 10;
  string phone = 11;
  string pic = 12;
  string pic_phone = 13;
  string created_at =  14;
  string created_by = 15;
  string updated_at = 16;
  string updated_by = 17;
}